Fix margin of populaires cards on mobile viewport

--- a/css/style.css
+++ b/css/style.css
@@ -707,6 +707,7 @@ body {
     }
 
     .populaires .card {
+        margin-top: 15px;
         width: 100%;
     }
 
